# ProyectoFinal

DNN_Music/: DNN_Music.ipynb  README.md  pyproject.toml
DNN_Music/App_deploy/: app.py  scaler.pkl
DNN_Music/docs/acceptance/: exit_report.md
DNN_Music/docs/business_understanding/: project_charter.md
DNN_Music/docs/data/: data_definition.md  data_dictionary.md  data_summary.md
DNN_Music/docs/deployment/: deploymentdoc.md
DNN_Music/docs/modeling/: baseline_models.md  model_report.md
DNN_Music/scripts/data_acquisition/: data_acquisition.py  main.py
DNN_Music/scripts/eda/: eda.py
DNN_Music/scripts/evaluation/: main.py
DNN_Music/scripts/preprocessing/: preprocessing.py
DNN_Music/scripts/training/: DNN_v2.py  KNN_v1.py  KNN_v2.py
